--- a/public/less/index.less
+++ b/public/less/index.less
@@ -138,8 +138,11 @@ font-size:11px;
         line-height: 35px;
     }
     ul li a{
-    text-decoration: none;
-    color: inherit;
+        text-decoration: none;
+        color: inherit;
+    }
+    li:hover{
+        cursor: pointer;
     }
 }
 
@@ -184,5 +187,6 @@ font-size:11px;
     .edit-icons a:hover{
       color: #63978c;
     }
+
 }
 /*End of manager page styles */
