Added button Resolve. Added method for change issue status

--- a/public/js/pages/templates/IssueDetails.html
+++ b/public/js/pages/templates/IssueDetails.html
@@ -9,5 +9,6 @@
 		<p><%= description %></p>
 	</div>
 	<span><strong>Issue category:</strong> <%= category.name %></span>
-  </div>
+	<span id="resolve">Resolve</span>
+ </div>
 </div>
