I've created EditIssueTemplate.html and EditIssueView.js and templates/EditIssueTemplate.html I used colorbox for Edit popup

--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -63,7 +63,7 @@
 
        <td class="edit-icons">
         <a href="#issues/<%= issue.get('id')  %>"><i class="fa fa-file-text-o"></i></a>
-        <a href="#"><i class="fa fa-pencil"></i></a>
+        <a href="#issue/<%= issue.get('id')  %>/edit"><i class="fa fa-pencil"></i></a>
         <a href="#"><i class="fa fa-thumbs-o-up"></i></a>
         <a href="#"><i class="fa fa-thumbs-o-down"></i></a>
         </td>
