fixed previous commit bugs

--- a/public/js/pages/templates/IssueEditTemplate.html
+++ b/public/js/pages/templates/IssueEditTemplate.html
@@ -23,7 +23,7 @@
 		<a id="issue_edit_save" class="btn btn-default btn-sm btn-block" role="button"><span class="glyphicon glyphicon-save"></span> Save Issue</a>
 	</div>
 	<div class="col-sm-6">
-		<button id="issue_edit_cancel" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-ban-circle"></span> Cancel</button>
+		<button id="issue_edit_cancel" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-ban-circle"></span> Close</button>
 	</div>
 
 </form>
