--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -1,5 +1,5 @@
 <div id ="manager-cont" class="row">
-    <div class="left-sd col-lg-3 col-md-3 col-sm-3 col-xs-3" id="left-sidebar" >
+    <div class="col-lg-3 col-md-3 sidebar-mobile" id="left-sidebar" >
         <div class="profile row"> 
             <div class="avatar col-lg-3 col-md-4 col-sm-12 col-xs-12"> 
                 <div id="avatarover">
@@ -26,6 +26,7 @@
                 <button type="submit" id="search-btn">Search</button>
             </div>
         </form>
+
     </div>         
 </div>
 
