--- a/public/less/index.less
+++ b/public/less/index.less
@@ -230,6 +230,9 @@ header {
   .width50{
     width:50%;
   }
+  #manager-panel input{
+    width:50%;
+  }
   header{
     ul li{
   display: block;
