fixed reponsive design for manager page and index page fixed height

--- a/public/less/index.less
+++ b/public/less/index.less
@@ -113,6 +113,9 @@ header {
 #point button, #photo button{
   margin-left: 5%;
 }
+.manager-cont{
+  height:100%;
+}
 /*Styles for manager page */
 #left-sidebar{
     background-color: @left-sidebar-background;
@@ -228,6 +231,9 @@ header {
     display: none;
   }
   .width50{
+    width:50%;
+  }
+  #manager-panel input{
     width:50%;
   }
   header{
