--- a/public/js/pages/templates/IssueEditTemplate.html
+++ b/public/js/pages/templates/IssueEditTemplate.html
@@ -1,41 +1,67 @@
-<div class="container-fluid">
-<div class="row">
-	<div class="col-xs-12 text-center">
-		<h2>Issue Edit (ID: <%= issue.id %>)</h2>
-	</div>
-</div>
+<style>
+.issue-edit-form-group label{
+    font-weight: bold;
+}
+
+.issue-edit-form-group{
+    padding-top: 5px;
+}
+
+.issue-edit-hint{
+    font-style: italic;
+    text-align: center;
+}
+
+.issue-edit-hint p{
+    margin: 15px 15px 0 15px;
+}
+
+.issue-edit-hint-error{
+    color: red;
+}
+</style>
+
+<div class="modal-dialog modal-md">
+	<div class="modal-content">
+		<div class="modal-header">
+			<h3 class="modal-title">Issue Edit (ID: <%= issue.id %>)</h3>
+		</div>
+		<div class="modal-body">
+
 
 <div class="row">
-	<div class="col-xs-12">
+
+<div class="col-xs-6">
+<div class="row">
+    <div class="col-xs-12 issue-edit-form-group">
     <label for="issue-name">Title</label>
     <input type="text" id="issue-name" class="desc-data form-control" value="<%= issue.name %>">
     </div>
 </div>
 
 <div class="row">
-	<div class="col-xs-12">
+    <div class="col-xs-12 issue-edit-form-group">
     <label for="issue-description">Description</label>
     <input type="text" id="issue-description" class="desc-data form-control"  value="<%= issue.description %>">
     </div>
 </div>
 <div class="row">
-	<div class="col-xs-12">
-	<label for="issue-category_id">Category</label>
-	    <select id = "issue-category_id" name="category-selector" class="category-selector form-control">
-	       <% _.each(categories, function(category, key, list) { %>      
-	       <option value="<%= category.id %>"        
-	       <%if(issue.category_id == category.id) {%>selected <%} %>
-	       >
-	            <%= category.name %>
-	            <%= console.log(category.name) %>        
-	        </option>      
-	       <% }) %>      
-	   </select>
+    <div class="col-xs-12 issue-edit-form-group">
+    <label for="issue-category_id">Category</label>
+        <select id = "issue-category_id" name="category-selector" class="category-selector form-control">
+           <% _.each(categories, function(category, key, list) { %>      
+           <option value="<%= category.id %>"        
+           <%if(issue.category_id == category.id) {%>selected <%} %>
+           >
+                <%= category.name %>
+                <%= console.log(category.name) %>        
+            </option>      
+           <% }) %>      
+       </select>
     </div>
 </div>
-    
 <div class="row">
-	<div class="col-xs-12">
+    <div class="col-xs-12 issue-edit-form-group">
     <label for="issue-status_id">Status</label>
        <select id="issue-status_id" name="status-slector" class="status-selector form-control">
            <% _.each(statuses, function(status, key, list) { %>
@@ -51,25 +77,38 @@
     </div>
 </div>
 
+</div>
+
+<div class="col-xs-6">
 <div class="row">
-<div class="col-xs-12 text-center">
+<div class="col-xs-12 text-center issue-edit-form-group">
 <link rel="stylesheet" href="css/severity-stars.css">
     <div class="stars" data-toggle="tooltip" data-placement="left" title="Severity">
     <% for(var star = 5; star > 0; star--) { %>
-	    <input class="star star-<%= star %>" id="star-<%= star %>" type="radio" name="severity" value="<%= star %>" <% if (star == issue.severity) {%> checked<% } %> />
-	    <label class="star star-<%= star %>" for="star-<%= star %>"></label>
-	<% } %>
-	</div>
+        <input class="star star-<%= star %>" id="star-<%= star %>" type="radio" name="severity" value="<%= star %>" <% if (star == issue.severity) {%> checked<% } %> />
+        <label class="star star-<%= star %>" for="star-<%= star %>"></label>
+    <% } %>
+    </div>
     </div>
 </div>
 
- 	<div class="row">
-	<div class="col-sm-6">
-		<a id="issue_edit_save" class="btn btn-default btn-sm btn-block" role="button"><span class="glyphicon glyphicon-save"></span> Ok</a>
+<div id="attachments">
+</div>
+</div>
+
+</div>
+<div class="row">
+<div class="col-xs-12 issue-edit-hint">
+<p id="issue-edit-hint"></p>
+</div>
+</div>
+</div>
+			<div class="modal-footer">
+				<div class="col-sm-6">
+		<a id="issue_edit_save" class="btn btn-default btn-sm btn-block" role="button"><span class="glyphicon glyphicon-save"></span> Save</a>
 	</div>
 	<div class="col-sm-6">
 		<button id="issue_edit_cancel" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-ban-circle"></span> Close</button>
 	</div>
-
-
-</div>
+			</div>
+		</div>
