added categories view, controller, template for manager

--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -15,7 +15,7 @@
                 <li id="recentlyissues-link">Recently added</li>
                 <li id="allissues-link">All problems</li>
                 <li id="solvedissues-link">Solved</li>
-                <li id="">Add category</li>
+                <li id="editcategories-link">Edit categories</li>
             </ul>
     </div>
     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" id="manager-panel">
