--- a/public/js/pages/templates/LoginTemplate.html
+++ b/public/js/pages/templates/LoginTemplate.html
@@ -22,7 +22,7 @@
     </div>
     </div>
     <div class="col-sm-10 col-xs-10 col-lg-10 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
-    <p><a href="#">I forgot my password</a></p>     
+    <p><a id="forgot-pass" href="#">I forgot my password</a></p>     
     </div>  
     </form>
     </div>  
