--- a/public/js/pages/templates/ChangePasswordTemplate.html
+++ b/public/js/pages/templates/ChangePasswordTemplate.html
@@ -1,5 +1,5 @@
-<div class="col-xs-8">
-	<div class="col-xs-12">
+<div class="col-lg-8c ol-xs-8">
+	<div class="col-lg-8 col-xs-12">
 		<br/>
 		Change password:
 		<form role="form">
