--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,6 +86,11 @@ header #main-banner:hover {
 .center-pills li {
   width: 33%;
 }
+#fileUpload {
+  margin-left: 19px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .form-group {
   margin-left: 10px;
   margin-top: 10px;
