--- a/public/less/index.less
+++ b/public/less/index.less
@@ -87,7 +87,11 @@ header {
 .center-pills li{
     width: 33%;
 }
-
+#fileUpload {
+  margin-left: 19px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .form-group {
   margin-left: 10px;
   margin-top: 10px;
