--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -25,6 +25,21 @@
                 <input type="text" class="form-control" placeholder="Search..." name="search" value=""> 
                 <button type="submit" id="search-btn">Search</button>
             </div>
+            <div class="checkbox">
+                <label>
+                  <input type="checkbox">Name
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                  <input type="checkbox">Description
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                  <input type="checkbox">Category
+                </label>
+            </div>            
         </form>
 
     </div>         
