--- a/public/less/index.less
+++ b/public/less/index.less
@@ -175,8 +175,6 @@ header {
 }
 
 #manager-panel{
-  
-
 
     .form-group{
         padding:0px;
@@ -191,6 +189,9 @@ header {
         width: 80%;
         border-radius: 0px;
         font-weight: normal;
+    }
+    .checkbox input[type='checkbox']{
+      width: inherit;
     }
     button{
         min-width: 20%;
@@ -223,6 +224,10 @@ header {
     }
     .edit-icons a:hover{
       color: #63978c;
+    }
+
+    .table-responsive{
+      padding-top: 10px;
     }
 
 }
