Fixed notification message on Login form Added checkbox functionality for search

--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -25,6 +25,8 @@
                 <input type="text" class="form-control" placeholder="Search..." name="search" value="<%= search %>"> 
                 <button type="submit" id="search-btn">Search</button>
             </div>
+            <div class="clearfix"></div>
+            <p class="text-info"></p>
             <div class="checkbox">
                 <label>
                   <input type="checkbox" name="nameCheckbox" value="1">Name
@@ -32,12 +34,12 @@
             </div>
             <div class="checkbox">
                 <label>
-                  <input type="checkbox" name="descriptionCheckbox" value="2">Description
+                  <input type="checkbox" name="descriptionCheckbox" value="1">Description
                 </label>
             </div>
             <div class="checkbox">
                 <label>
-                  <input type="checkbox" name="categoryCheckbox" value="3">Category
+                  <input type="checkbox" name="categoryCheckbox" value="1">Category
                 </label>
             </div>            
         </form>
