--- a/public/js/pages/templates/LoginTemplate.html
+++ b/public/js/pages/templates/LoginTemplate.html
@@ -1,5 +1,6 @@
     <div class="row">
     <div class="form-wrapper form-horizontal">
+    <p class="text-info"></p>    
     <form id="login_form" action="/auth/login" accept-encoding="UTF-8">
     <p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
     <div class="form-group form-group-sm">
